--- a/GreenGardenCampsiteClient/GreenGardenCampsiteClient/Views/OrderManagement/OrderCampingGears.cshtml
+++ b/GreenGardenCampsiteClient/GreenGardenCampsiteClient/Views/OrderManagement/OrderCampingGears.cshtml
@@ -10,45 +10,75 @@
 <body>
     <div class="container mt-4">
         <h2>Đặt đồ cắm trại</h2><br />
-     
-            <div class="col-md-3">
-                <select class="form-select">
-                    <option value="all">Tất cả</option>
-                    <option value="">Lều</option>
-                    <option value="">Dụng cụ</option>
+
+        <div class="col-md-3">
+            <script>
+                function change() {
+                    document.getElementById("fr").submit();
+                }
+            </script>
+            <form id="fr" asp-controller="OrderManagement" asp-action="OrderCampingGears" method="get">
+                <select name="idcategory" class="form-select" onchange="change()">
+                    <option value="0">Tất cả</option>
+
+                    @foreach (GearCategoryVM item in ViewBag.categories)
+                    {
+                        if (item.GearCategoryId.Equals(ViewBag.idcategory))
+                        {
+                            <option value="@item.GearCategoryId" selected>
+                                @item.GearCategoryName
+                            </option>
+                        }
+                        else
+                        {
+                            <option value="@item.GearCategoryId">
+                                @item.GearCategoryName
+                            </option>
+
+                        }
+                    }
                 </select>
-            </div>
+            </form>
 
-            
-                <table class="table table-striped table-bordered">
-                    <thead>
-                        <tr>
-                            <th>Mã đồ</th>
-                            <th>Tên</th>
-                            <th>Hình ảnh</th>
-                            <th>Giá thuê</th>
-                            <th>Số lượng</th>
-                            
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>01</td>
-                            <td>Lều đơn</td>
-                            <td>50.000/h</td>
-                            <td>
-                        <input type="number" min="0" value="0" style="width: 100px;">
-                            </td>
-                            <td>img</td>
-                        </tr>
-                    </tbody>
-                </table>
-            
+        </div>
 
-        <a href="/OrderManagement/CreateOrder" class="btn btn-secondary">Quay lại</a>
-            <a href="/OrderManagement/OrderFoodAndDrinks" class="btn btn-primary">Tiếp tục</a>
-            
-       
+
+        <table class="table table-striped table-bordered">
+            <thead>
+                <tr>
+                    <th>Mã đồ</th>
+                    <th>Tên</th>
+                    <th>Hình ảnh</th>
+                    <th>S/L có sẵn</th>
+                    <th>Giá thuê</th>
+                    <th>Số lượng</th>
+
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (GearVM item in ViewBag.gears)
+                {
+                    <tr>
+                        <td>@item.GearId</td>
+                        <td>@item.GearName</td>
+                        <td>@item.ImgUrl</td>
+                        <td>@item.QuantityAvailable</td>
+                        <td>@item.RentalPrice</td>
+                        <td>
+                            <input type="number" min="0" value="0" style="width: 100px;">
+                        </td>
+
+                    </tr>
+                }
+
+            </tbody>
+        </table>
+
+
+        <a href="/OrderManagement/OrderTickets" class="btn btn-secondary">Quay lại</a>
+        <a href="/OrderManagement/OrderFoodAndDrinks" class="btn btn-primary">Tiếp tục</a>
+
+
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C8fC7N6'e6OzTO+648+pGdO/d6k4l726DwN13j0xV7V7+x70863161b" crossorigin="anonymous"></script>
