--- a/GreenGardenCampsiteClient/GreenGardenCampsiteClient/Views/OrderManagement/OrderTickets.cshtml
+++ b/GreenGardenCampsiteClient/GreenGardenCampsiteClient/Views/OrderManagement/OrderTickets.cshtml
@@ -3,38 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tạo order đồ ăn mới</title>
+    <title>Tạo order vé mới</title>
     <link href="~/css/Admin/styles.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T387870TPpwcgR8m7+UP+7X/qOH3b6T1QjsDuUp25/7YkG79664NVoIPd35N72q10" crossorigin="anonymous">
 </head>
 <body>
     <div class="container mt-4">
-        <h2>Đặt đồ ăn</h2><br />
+        <h2>Đặt vé</h2><br />
+
+        <div class="row g-2 mb-6">
+            <div class="col-md-6">
+                <label for="customerName" class="form-label">Tên khách hàng</label>
+                <input type="text" class="form-control" id="customerName" name="customerName" required>
+            </div>
+            <div class="col-md-3">
+                <label for="orderDate" class="form-label">Ngày sử dụng</label>
+                <input type="text" class="form-control" id="orderDate" name="orderDate" required>
+            </div>
+        </div>
+        <br />
         <script>
             function change() {
                 document.getElementById("fr").submit();
             }
         </script>
         <div class="col-md-3">
-            <form id="fr" asp-controller="OrderManagement" asp-action="OrderFoodAndDrinks" method="get">
+            <form id="fr" asp-controller="OrderManagement" asp-action="CreateOrder" method="get">
 
 
                 <select name="idcategory" class="form-select" onchange="change()">
                     <option value="0">
                         All
                     </option>
-                    @foreach (FoodAndDrinkCategoryVM item in ViewBag.categories)
+                    @foreach (TicketCategoryVM item in ViewBag.categories)
                     {
-                        if (item.CategoryId.Equals(ViewBag.idcategory))
+                        if (item.TicketCategoryId.Equals(ViewBag.idcategory))
                         {
-                            <option value="@item.CategoryId" selected>
-                                @item.CategoryName
+                            <option value="@item.TicketCategoryId" selected>
+                                @item.TicketCategoryName
                             </option>
                         }
                         else
                         {
-                            <option value="@item.CategoryId">
-                                @item.CategoryName
+                            <option value="@item.TicketCategoryId">
+                                @item.TicketCategoryName
                             </option>
 
                         }
@@ -43,40 +55,39 @@
             </form>
         </div>
 
+
         <table class="table table-striped table-bordered">
             <thead>
                 <tr>
-                    <th>Mã</th>
-                    <th>Tên</th>
+                    <th>Mã vẽ</th>
+                    <th>Tên vé</th>
                     <th>Hình ảnh</th>
                     <th>Giá</th>
-                    <th>Yêu cầu thêm</th>
                     <th>Số lượng</th>
 
                 </tr>
             </thead>
             <tbody>
-                @foreach (FoodAndDrinkVM item in ViewBag.gears)
+                @foreach (TicketVM item in ViewBag.tickets)
                 {
                     <tr>
-                        <td>@item.ItemId</td>
-                        <td>@item.ItemName</td>
+                        <td>@item.TicketId</td>
+                        <td>@item.TicketName</td>
                         <td>@item.ImgUrl</td>
                         <td>@item.Price</td>
-                        <td><textarea></textarea></td>
                         <td>
                             <input type="number" min="0" value="0" style="width: 100px;">
                         </td>
 
                     </tr>
+
+
                 }
             </tbody>
         </table>
 
-
-        <a href="/OrderManagement/OrderCampingGears" class="btn btn-secondary">Quay lại</a>
-        <a class="btn btn-primary" href="/OrderManagement/OrderDetails">Chi tiết đơn hàng</a>
-
+        <a href="/OrderManagement/Index" class="btn btn-secondary">Quay lại</a>
+        <a href="/OrderManagement/OrderCampingGears" class="btn btn-primary">Tiếp tục</a>
 
 
     </div>
