--- a/GreenGardenCampsiteClient/GreenGardenCampsiteClient/Views/OrderManagement/OrderFoodAndDrinks.cshtml
+++ b/GreenGardenCampsiteClient/GreenGardenCampsiteClient/Views/OrderManagement/OrderFoodAndDrinks.cshtml
@@ -77,7 +77,9 @@
                     }
                 </tbody>
             </table>
-            <button type="submit">Add to Cart</button>
+            <button style="background-color: #28a745; margin-bottom: 5px" type="submit" class="btn btn-primary">
+                <i class="bi bi-cart"></i> Add to Cart
+            </button>
 
         </form>
 
